internal/octogo/testdata/decl_redecl.ogo
// ERROR "a declared.*before"
var a, a int // Non blank ('_') identifiers can appear only once in a scope, `init()` functions aside.
